[gd_scene load_steps=2 format=3 uid="uid://c7xcjpknu3hi4"]

[ext_resource type="Script" path="res://Scenes/Menus/MainMenu.gd" id="2_xi0tl"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_xi0tl")

[node name="Credits" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -540.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
text = "WASD to move
Spacebar to shoot
F to Bomb

Assets: kenney.nl 
Based on tutorial by eightfaun
Game: dwightingale"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 540.0
offset_bottom = 960.0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
layout_mode = 2

[node name="Simple Shoot Em Up" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Simple Shoot Em Up"

[node name="StartGame" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Start Game
"

[node name="LevelSelect" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Level Select
"

[node name="QuitGame" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit Game"
